# template-rs

./: Cargo.toml  Justfile  README.md
src/: file.rs  languages.rs  main.rs  path.rs  template.rs
src/commands/: author.rs  init.rs  list.rs  mod.rs
