[package]
name = "template-rs"
version = "0.1.0"
edition = "2024"
authors = ["Matthew Green"]

[[bin]]
name = "template"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
shellexpand = "3.1.1"
toml = "0.9.7"
